Show info at cursor in a floating label
Also maven fixes.