@@ -3,22 +3,36 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.nbfalcon</groupId>
-    <artifactId>java-fractal-viewer-additional-tests</artifactId>
-    <version>0.1</version>
+    <parent>
+        <artifactId>java-fractal-viewer</artifactId>
+        <groupId>org.nbfalcon</groupId>
+        <version>0.1</version>
+    </parent>
+
+    <artifactId>java-fractal-viewer-research-x</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>org.nbfalcon</groupId>
             <artifactId>java-fractal-viewer</artifactId>
             <version>0.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
-    <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.vm.annotation=ALL-UNNAMED</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
